--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 
+# MySQL connection
+spring.datasource.url=jdbc:mysql://localhost:3306/springCatApiDB
+spring.datasource.username=root
+spring.datasource.password=12345678
